--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,35 @@ Thumbs.db
 .pidb
 .svclog
 .scc
+DATOS/obj/Debug/DATOS.csproj.AssemblyReference.cache
+DATOS/obj/Debug/DATOS.csproj.CoreCompileInputs.cache
+DATOS/obj/Debug/DATOS.csproj.FileListAbsolute.txt
+DATOS/obj/Debug/DATOS.dll
+DATOS/obj/Debug/DATOS.pdb
+Negocio/bin/Debug/DATOS.dll
+Negocio/bin/Debug/DATOS.pdb
+Negocio/bin/Debug/Negocio.dll
+Negocio/bin/Debug/Negocio.pdb
+Negocio/obj/Debug/Negocio.csproj.AssemblyReference.cache
+Negocio/obj/Debug/Negocio.csproj.CoreCompileInputs.cache
+Negocio/obj/Debug/Negocio.csproj.FileListAbsolute.txt
+Negocio/obj/Debug/Negocio.dll
+Negocio/obj/Debug/Negocio.pdb
+Vistas/bin/DATOS.dll
+Vistas/bin/DATOS.pdb
+Vistas/bin/Negocio.dll
+Vistas/bin/Negocio.pdb
+Vistas/bin/Vistas.dll
+Vistas/bin/Vistas.pdb
+Vistas/obj/Debug/Vistas.csproj.AssemblyReference.cache
+Vistas/obj/Debug/Vistas.csproj.CoreCompileInputs.cache
+Vistas/obj/Debug/Vistas.csproj.FileListAbsolute.txt
+Vistas/obj/Debug/Vistas.dll
+Vistas/obj/Debug/Vistas.pdb
+DATOS/bin/Debug/DATOS.dll
+DATOS/bin/Debug/DATOS.pdb
+*.pdb
+*.pdb
+*.dll
+*.dll
+*.cache
