--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -44,6 +44,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -75,6 +76,9 @@
     <Content Include="EditarFormularioPaciente.aspx" />
     <Content Include="HomeAdministradores.aspx" />
     <Content Include="HomeMedicos.aspx" />
+    <Content Include="InformeEspecialidadUtilizada.aspx" />
+    <Content Include="Informes.aspx" />
+    <Content Include="InformeTurnosPresentismo.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -134,6 +138,27 @@
     </Compile>
     <Compile Include="HomeMedicos.aspx.designer.cs">
       <DependentUpon>HomeMedicos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InformeEspecialidadUtilizada.aspx.cs">
+      <DependentUpon>InformeEspecialidadUtilizada.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InformeEspecialidadUtilizada.aspx.designer.cs">
+      <DependentUpon>InformeEspecialidadUtilizada.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Informes.aspx.cs">
+      <DependentUpon>Informes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Informes.aspx.designer.cs">
+      <DependentUpon>Informes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="InformeTurnosPresentismo.aspx.cs">
+      <DependentUpon>InformeTurnosPresentismo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="InformeTurnosPresentismo.aspx.designer.cs">
+      <DependentUpon>InformeTurnosPresentismo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
